--- a/week3.ipynb
+++ b/week3.ipynb
@@ -755,9 +755,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... failed with initial frozen solve. Retrying with flexible solve.\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: C:\\anaconda\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - folium=0.5.0\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    altair-4.1.0               |             py_1         614 KB  conda-forge\n",
+      "    branca-0.4.1               |             py_0          26 KB  conda-forge\n",
+      "    certifi-2019.9.11          |           py37_0         147 KB  conda-forge\n",
+      "    folium-0.5.0               |             py_0          45 KB  conda-forge\n",
+      "    vincent-0.4.4              |             py_1          28 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:         860 KB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  altair             conda-forge/noarch::altair-4.1.0-py_1\n",
+      "  branca             conda-forge/noarch::branca-0.4.1-py_0\n",
+      "  folium             conda-forge/noarch::folium-0.5.0-py_0\n",
+      "  vincent            conda-forge/noarch::vincent-0.4.4-py_1\n",
+      "\n",
+      "The following packages will be SUPERSEDED by a higher-priority channel:\n",
+      "\n",
+      "  certifi                                         pkgs/main --> conda-forge\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "\n",
+      "folium-0.5.0         | 45 KB     |            |   0% \n",
+      "folium-0.5.0         | 45 KB     | ###5       |  35% \n",
+      "folium-0.5.0         | 45 KB     | ########## | 100% \n",
+      "\n",
+      "altair-4.1.0         | 614 KB    |            |   0% \n",
+      "altair-4.1.0         | 614 KB    | 2          |   3% \n",
+      "altair-4.1.0         | 614 KB    | #8         |  18% \n",
+      "altair-4.1.0         | 614 KB    | ##3        |  23% \n",
+      "altair-4.1.0         | 614 KB    | ###1       |  31% \n",
+      "altair-4.1.0         | 614 KB    | ####1      |  42% \n",
+      "altair-4.1.0         | 614 KB    | #####2     |  52% \n",
+      "altair-4.1.0         | 614 KB    | #####9     |  60% \n",
+      "altair-4.1.0         | 614 KB    | #######2   |  73% \n",
+      "altair-4.1.0         | 614 KB    | ########   |  81% \n",
+      "altair-4.1.0         | 614 KB    | #########1 |  91% \n",
+      "altair-4.1.0         | 614 KB    | ########## | 100% \n",
+      "\n",
+      "branca-0.4.1         | 26 KB     |            |   0% \n",
+      "branca-0.4.1         | 26 KB     | ######1    |  62% \n",
+      "branca-0.4.1         | 26 KB     | ########## | 100% \n",
+      "\n",
+      "certifi-2019.9.11    | 147 KB    |            |   0% \n",
+      "certifi-2019.9.11    | 147 KB    | #          |  11% \n",
+      "certifi-2019.9.11    | 147 KB    | #####4     |  54% \n",
+      "certifi-2019.9.11    | 147 KB    | ########## | 100% \n",
+      "\n",
+      "vincent-0.4.4        | 28 KB     |            |   0% \n",
+      "vincent-0.4.4        | 28 KB     | #####7     |  58% \n",
+      "vincent-0.4.4        | 28 KB     | ########## | 100% \n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda install -c conda-forge folium=0.5.0 --y \n",
+    "# uncomment this line if you haven't completed the Foursquare API lab\n",
+    "import folium # map rendering library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'folium' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-51-4a423f393f87>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# create map of New York using latitude and longitude values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmap_toronto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfolium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlongitude\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzoom_start\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# add markers to map\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mlat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlng\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mborough\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mneighe\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mneighborhood\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Latitude'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mneighborhood\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Longitude'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mneighborhood\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Borough'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mneighborhood\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Neighborhood'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'folium' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# create map of New York using latitude and longitude values\n",
     "map_toronto = folium.Map(location=[latitude, longitude], zoom_start=10)\n",
@@ -778,6 +880,13 @@
     "    \n",
     "map_toronto"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
